--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script crossorigin="anonymous" src="https://unpkg.com/@hotwired/turbo@7.1.0/dist/turbo.es2017-umd.js"></script>
+  <script src="/assets/script.js"></script>
+  <link rel="stylesheet" href="/assets/style.css">
   <title>{{ .title }}</title>
 </head>
 <body>
